Revision history for CPANPLUS-Dist-Fedora

( CPANPLUS-Dist-Mdv changes below. )

 - Changed the Readonly variables that contained command-line 
 invocations of "rpm" (that got invoked when loading the module) to a
 memoized method that gets called at run time.
    - Fixes the build errors reported in:
        - http://nntp.x.perl.org/group/perl.cpan.testers/2202219
 
0.0.2 TODO: FILL IN.
 - Applied a modified version of Chris Weyl's patch to 
 lib/CPANPLUS/Dist/Fedora.pm :
    - generate the spec using Template Toolkit.
    - adapted to some Fedora conventions.
    - fixed some missing capitalisation.
 - Made sure the 'requires' in Build.PL are not present in 'build_requires'.
 - Now generating Makefile.PL from Build.PL.

0.0.1 Sat Aug 23 01:23:56 IDT 2008
 - Forked from CPANPLUS-Dist-Mdv-0.3.7.
 - Adapted to Fedora.

Revision history for CPANPLUS-Dist-Mdv

High-level changelog
====================

0.3.x  better module information
0.2.x  better resilience to errors
0.1.x  initial release


Low-level changelog
===================

0.3.7 Sun Aug 10 09:00:43 CEST 2008
 - fix bug 38360: borken changelog generation (shlomi fish)
 - update repository information

0.3.6 Wed Jun 11 12:55:13 CEST 2008
 - don't insert a blank line before description, as per thierry vignaud's request
 - use %buildroot rpm macro instead of env var, as per guillaume's request
 - don't package META.yml file, as per guillaume's request
 - added initial changelog to be imported by mdvsys, as per guillaume's request

0.3.5 Sun Feb 10 18:53:39 CET 2008
 - moving to git
 - using pod::pom::view::text to format description
    . wrapping description to fit in 80 columns
    . removing all pod sequences in it

0.3.4 Fri Dec 21 13:12:52 CET 2007
 - ticket #31693: using rpm command to find rpm topdir

0.3.3 Mon Nov 26 13:57:03 CET 2007
 - fixing typo in default description
 - kwalitee/cpants release

0.3.2 Tue Nov 13 18:09:34 CET 2007
 - checking for Makefile.PL à la Module::Build::Compat